Modal window in wich it says that my portfolio is under construction

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      $(document).ready(function(){
+        $('#myModal').modal('show')
+      });
+    </script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&display=swap');
     </style>
@@ -30,6 +35,7 @@
     <title>React App</title>
   </head>
   <body>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
